Fix bug allowing clients to have the same name if they had extra whitespace

--- a/app/assets/stylesheets/z_media_queries.scss
+++ b/app/assets/stylesheets/z_media_queries.scss
@@ -338,9 +338,9 @@
 		bottom:50px;
 	}
 
-	body.homepage.ios .scrollwrapper {
-		padding-top:50px;
-	}
+	// body.homepage.ios .scrollwrapper {
+	// 	padding-top:50px;
+	// }
 
 	#contentwrapper.sidebaropen {
 		overflow:hidden !important;
